<resources>
    <string name="app_name">APInstagramClone</string>

    <!-- Parse-server stuff -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">71dhWoKUMOeo9nZzm3ng2ReL1u5Owezm792FkwKt</string>
    <string name="back4app_client_key">OLwQh6RUgLdALx8XGLnSydGG9s5bZXP0Ak8efBcr</string>

    <!-- General strings-->
    <string name="toast_generic_error">Something went wrong, sorry!</string>
    <string name="generic_dialog_ok">OK</string>
    <string name="generic_dialog_loading">Loading…</string>

    <!-- SignUpActivity -->
    <string name="activity_sign_up_title">Sign Up</string>
    <string name="hint_sign_up_email">Please enter an email-address…</string>
    <string name="hint_sign_up_username">Please enter a username…</string>
    <string name="hint_sign_up_password">Please enter a password…</string>
    <string name="hint_sign_up_password_confirm">Please confirm password…</string>
    <string name="btn_sign_up_sign_up">Sign Up</string>
    <string name="btn_sign_up_already_signed_up">I have an account!</string>
    <string name="toast_sign_up_need_email">You must enter an email address.</string>
    <string name="toast_sign_up_need_username">You must enter a username.</string>
    <string name="toast_sign_up_need_password">You must enter a password and confirm it.</string>
    <string name="toast_sign_up_objection_stringbuilder">Ooops, please have a look at the following:\n</string>
    <string name="toast_sign_up_success">Successfully created user %s</string>
    <string name="progress_sign_up_sign_up">Creating account for %s…</string>

    <!-- LoginActivity -->
    <string name="activity_login_title">Login</string>
    <string name="hint_login_email">Enter account email-address…</string>
    <string name="hint_login_password">Enter account password…</string>
    <string name="btn_login_login">Login</string>
    <string name="btn_login_need_account">I need an account!</string>
    <string name="toast_login_login_success">%s logged in successfully!</string>
    <string name="toast_login_objection_stringbuilder">Ooops, forgot something?:\n</string>
    <string name="toast_login_need_username">Username field is empty.</string>
    <string name="toast_login_need_password">Password field is empty.</string>

    <!-- SocialMediaActivity -->
    <string name="activity_social_media_title">Social Media!</string>
    <string name="toast_social_media_logout_successful">%s logged out successfully!</string>
    <string name="dialog_social_media_activity_posting">Posting Image…</string>
    <string name="toast_social_media_post_successful">Post Successful.</string>

    <!-- UsersPostsActivity.java -->
    <string name="activity_users_posts_title">%s\'s posts</string>
    <string name="toast_users_posts_has_no_posts">%s has no posts</string>
    <string name="users_posts_no_description_provided">No description provided</string>


    <!-- ProfileTab -->
    <string name="hint_tab_profile_profile_name">Your profile name</string>
    <string name="hint_tab_profile_bio">Your bio</string>
    <string name="hint_tab_profile_profession">Your profession</string>
    <string name="hint_tab_profile_hobbies">Your hobbies</string>
    <string name="hint_tab_profile_sport">Your favorite sport</string>
    <string name="btn_tab_profile_update_info">Update Info</string>
    <string name="btn_tab_profile_update_info_alternate">Edit Info</string>
    <string name="btn_tab_profile_logout">Logout %s</string>
    <string name="tab_profile_profile_name_txt_template">Profile name: %s</string>
    <string name="tab_profile_bio_txt_template">Bio: %s</string>
    <string name="tab_profile_profession_txt_template">Profession: %s</string>
    <string name="tab_profile_hobbies_txt_template">Hobbies: %s</string>
    <string name="tab_profile_sport_name_txt_template">Sport: %s</string>
    <string name="toast_tab_profile_profile_update_success">Profile update successful!</string>
    <string name="toast_tab_profile_profile_update_no_updates">No changes made.</string>

    <!-- UsersTab -->
    <string name="dialog_tab_users_long_click">%s\'s info</string>

    <!-- SharePictureTab -->
    <string name="hint_tab_share_picture_description">Image description…</string>
    <string name="btn_tab_share_picture_share_image">Share Image</string>
    <string name="btn_tab_share_picture_share_image_before_choosing">Tap image placeholder to select image.</string>
    <string name="toast_tab_share_picture_must_describe">You must provide a description…</string>
    <string name="toast_tab_share_picture_upload_success">Upload successful</string>

    <!-- my_menu.xml -->
    <string name="label_post_image_item">Post Image</string>
    <string name="label_logout_user_item">Logout</string>


</resources>
